book-service ddd onion architecture rework
Co-Authored-By: Beytullah Çetin <44231507+BeytullahCetin@users.noreply.github.com>